--- a/templates/snippets/list.html
+++ b/templates/snippets/list.html
@@ -10,6 +10,10 @@
         <td>{{snippet.language}}</td>
         <td>{{snippet.description}}</td>
     </tr>
+    {%empty%}
+    <tr>
+        <td colspan="3">No snippets to show</td>
+    </tr>
     {%endfor%}
 </table>
 {%endblock%}
