added user update view

--- a/templates/accounts/base_profile.html
+++ b/templates/accounts/base_profile.html
@@ -25,9 +25,7 @@
                         <h4 class="media-heading">{{user.email}}</h4>
                 		<p><span class="label label-info">888 photos</span> <span class="label label-warning">150 followers</span></p>
                         <p>
-                            <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-comment"></span> Message</a>
-                            <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-heart"></span> Favorite</a>
-                            <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-ban-circle"></span> Unfollow</a>
+                            <a href="{% url 'update' user.id%}" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-edit"></span> Edit details</a>
                         </p>
                     </div>
                 </div>
