--- a/templates/snippets/edit.html
+++ b/templates/snippets/edit.html
@@ -23,7 +23,7 @@
         </script>
 {% endblock %}
 {% block content %}
-  <h2>Login</h2>
+  <h2>Edit Snippet</h2>
   <form method="post" id="create-form">
     {% csrf_token %}
     {{ form.as_p }}
